Revision history for {{$dist->name}}

{{$NEXT}}

0.055     2014-03-24 04:03:47Z
          - fix missing prereq declaration needed from last release

0.054     2014-03-23 04:49:15Z
          - pass default_jobs => 9 option to all installer tools in use, and
            [RunExtraTests]
          - also ensure we never index corpus/; only list no_index directories
            when they actually exist

0.053     2014-03-12 15:01:19Z
          - now using [Test::CleanNamespaces] to build this distribution as
            well as in newly-minted distributions
          - make airplane mode actually work (doh!)

0.052     2014-02-25 04:56:32Z
          - [VerifyPhases] added (another information-only plugin)
          - added missing prereq (from v0.051)
          - minted clean-namespaces.t test no longer skips ::Conflicts
            module (added in v0.019)

0.051     2014-02-23 01:10:45Z
          - fix argument passed to [Git::Commit] that no longer works now that
            it uses Path::Tiny instead of Path::Class
          - new "surgical_podweaver" configuration option
          - minimum perl version softened to 5.010, except for when minting
            distributions (still at 5.013002)

0.050     2014-02-13 17:39:49Z
          - adjusted CONTRIBUTING content for XS-based dists - I promise to
            include a token Makefile.PL to allow development without dzil.

0.049     2014-01-29 02:56:31Z
          - fixed tests that can fail on systems with no spelling dictionaries
            installed

0.048     2014-01-21 04:07:40Z
          - removed [PruneCruft], which does nothing useful with
            [Git::GatherDir]
          - removed [ManifestSkip] which does nothing useful when there is no
            MANIFEST.SKIP file
          - add an option for what files to copy from the release, for easier
            customization
          - added a dummy option for [Git::Check], to work around an issue in