@@ -49,6 +49,7 @@ Dist::Zilla::Plugin::Authority = 0
 Dist::Zilla::Plugin::MetaNoIndex = 0
 Dist::Zilla::Plugin::MetaProvides::Package = 1.15000002
 Dist::Zilla::Plugin::MetaConfig = 0
+Dist::Zilla::Plugin::Keywords = 0.004
 ;Dist::Zilla::Plugin::ContributorsFromGit = 0
 Dist::Zilla::Plugin::AutoPrereqs = 0
 Dist::Zilla::Plugin::Prereqs::AuthorDeps = 0
